--- a/requirements.txt
+++ b/requirements.txt
@@ -1,231 +1,33 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-alembic==1.17.0
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.11.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.4.0
-asgiref==3.9.1
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.4.0
-audioop-lts==0.2.2
-babel==2.17.0
-banal==1.0.6
-bcrypt==4.1.2
-beautifulsoup4==4.14.2
-bleach==6.3.0
-blinker==1.9.0
-bottle==0.13.4
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.2.1
-clr_loader==0.2.7.post0
-colorama==0.4.6
-comm==0.2.3
-comtypes==1.4.12
-contourpy==1.3.3
-cryptography==42.0.5
-cycler==0.12.1
-dataset==1.6.2
-datasets==4.4.1
-debugpy==1.8.17
-decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-dill==0.4.0
-distro==1.9.0
-Django==5.2.6
-dnspython==2.8.0
-email-validator==2.1.0
-et_xmlfile==2.0.0
-executing==2.2.1
-fastapi==0.104.1
-fastapi-responses==0.2.1
-fastjsonschema==2.21.2
-filelock==3.19.1
+# --- Web Framework ---
 Flask==2.3.3
-Flask-Limiter==3.5.0
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-fonttools==4.60.1
-fqdn==1.5.1
-frozenlist==1.8.0
-fsspec==2025.9.0
-gpt4all==2.8.2
-greenlet==3.2.4
 gunicorn==21.2.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.36.0
-idna==3.11
-image==1.5.33
-ipykernel==7.1.0
-ipython==9.7.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.8
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.2
-Jinja2==3.1.2
-joblib==1.5.2
-json5==0.12.1
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.9.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.10
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.28.0
-jupyterlab_widgets==3.0.16
-kiwisolver==1.4.9
-lark==1.3.1
-limits==5.6.0
-llvmlite==0.44.0
-Mako==1.3.10
-markdown-it-py==4.0.0
-MarkupSafe==2.1.3
-matplotlib==3.10.7
-matplotlib-inline==0.2.1
-mdurl==0.1.2
-mistune==3.1.4
-more-itertools==10.8.0
-MouseInfo==0.1.3
-mpmath==1.3.0
-multidict==6.7.0
-multipledispatch==1.0.0
-multiprocess==0.70.18
-natsort==8.4.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-notebook==7.4.7
-notebook_shim==0.2.4
-numba==0.61.2
-numpy==2.2.6
-openai==1.12.0
-openai-whisper==20250625
-openpyxl==3.1.5
-ordered-set==4.1.0
-packaging==25.0
-pandas==2.3.3
-pandas_flavor==0.7.0
-pandocfilters==1.5.1
-parso==0.8.5
-pefile==2023.2.7
-pillow==11.3.0
-platformdirs==4.5.0
-plyer==2.1.0
-prometheus_client==0.23.1
-prompt_toolkit==3.0.52
-propcache==0.4.1
-proxy_tools==0.1.0
-psutil==7.1.3
-ptl==0.3.0
-pure_eval==0.2.3
-pvporcupine==2.2.1
-pyarrow==22.0.0
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycparser==2.23
-pydantic==2.11.7
-pydub==0.25.1
-pygame==2.6.1
-PyGetWindow==0.0.9
-Pygments==2.19.2
-pyinstaller==6.15.0
-pyinstaller-hooks-contrib==2025.8
-pyjanitor==0.32.1
-PyJWT==2.8.0
-PyMsgBox==2.0.1
-pyparsing==3.2.5
-pyperclip==1.10.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-json-logger==4.0.0
-python-multipart==0.0.20
-pythonnet==3.0.5
-pyttsx3==2.90
-pytweening==1.2.0
-pytz==2025.2
-pywebview==6.0
-pywin32-ctypes==0.2.3
-pywinpty==3.0.2
-PyYAML==6.0.3
-pyzmq==27.1.0
-referencing==0.37.0
-regex==2025.9.1
-requests==2.32.5
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rich==13.9.4
-rpds-py==0.28.0
-safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.3
-seaborn==0.13.2
-Send2Trash==1.8.3
-setuptools==80.9.0
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.8
-SpeechRecognition==3.14.3
-SQLAlchemy==1.4.54
-sqlparse==0.5.3
-stack-data==0.6.3
-standard-aifc==3.13.0
-standard-chunk==3.13.0
-starlette==0.27.0
-sympy==1.14.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tiktoken==0.11.0
-tinycss2==1.4.0
-torch==2.8.0
-tornado==6.5.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.57.1
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.5.0
-uvicorn==0.35.0
-wcwidth==0.2.14
-webcolors==25.10.0
-webencodings==0.5.1
-websocket-client==1.9.0
-websockets==15.0.1
 Werkzeug==2.3.7
-whisper==1.1.10
-widgetsnbextension==4.0.15
-wrapt==1.17.3
-WTForms==3.1.1
-xarray==2025.10.1
-xxhash==3.6.0
-yarl==1.22.0
-pywin32
-pypiwin32
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 
+# --- ORM and Database ---
+SQLAlchemy==1.4.54
+alembic==1.17.0
+
+# --- Utilities ---
+requests==2.31.0
+python-dotenv==1.1.1
+cryptography==42.0.5
+WTForms==3.1.1
+click==8.2.1
+blinker==1.9.0
+
+# --- ML / Data (if needed for backend processing) ---
+numpy==1.26.4
+pandas==2.3.3
+scikit-learn==1.4.2
+
+# --- Optional, safe visualization tools ---
+matplotlib==3.8.0
+seaborn==0.13.2
