--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 # --- Web Framework ---
-Flask==2.3.3
+Flask==3.0.3
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 gunicorn==21.2.0
-Werkzeug==2.3.7
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+Werkzeug==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
 
 # --- ORM and Database ---
-SQLAlchemy==1.4.54
-alembic==1.17.0
+SQLAlchemy==2.0.36
+alembic==1.13.3
 
 # --- Utilities ---
-requests==2.31.0
-python-dotenv==1.1.1
-cryptography==42.0.5
-WTForms==3.1.1
-click==8.2.1
+requests==2.32.3
+python-dotenv==1.0.1
+cryptography==43.0.1
+WTForms==3.1.2
+click==8.1.7
 blinker==1.9.0
 
-# --- ML / Data (if needed for backend processing) ---
+# --- ML / Data (optional but stable) ---
 numpy==1.26.4
-pandas==2.3.3
-scikit-learn==1.4.2
+pandas==2.2.3
+scikit-learn==1.5.2
 
-# --- Optional, safe visualization tools ---
-matplotlib==3.8.0
+# --- Visualization (optional) ---
+matplotlib==3.9.2
 seaborn==0.13.2
